Fixed Favorite controller and service tests; implemented User getUser method and added test.