@@ -1,19 +1,21 @@
 package com.project.reelRadar.service;
-/**
+
 import com.project.reelRadar.dto.FavoriteDTO;
+import com.project.reelRadar.dto.FavoriteDeleteRequestDTO;
 import com.project.reelRadar.exception.FavoriteNotFoundException;
+import com.project.reelRadar.exception.UserNotFoundException;
 import com.project.reelRadar.model.Favorite;
+import com.project.reelRadar.model.User;
 import com.project.reelRadar.repository.FavoriteRepository;
 import com.project.reelRadar.service.serviceImpl.FavoriteServiceImpl;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
 
 import java.util.*;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 import static org.mockito.MockitoAnnotations.openMocks;
 
@@ -25,57 +27,71 @@ public class FavoriteServiceImplTest {
     @InjectMocks
     private FavoriteServiceImpl favoriteService;
 
+    @Mock
+    private UserService userService;
+
     private FavoriteDTO favoriteDTO;
     private Favorite favorite;
+    private FavoriteDeleteRequestDTO favoriteDeleteRequestDTO;
+    private User user;
+    private UUID userId;
 
     @BeforeEach
     void setUp() {
         openMocks(this);
 
+        user = new User();
+        user.setId(userId = UUID.randomUUID());
+
         favorite = new Favorite();
-        favorite.setId(UUID.randomUUID());
-        favorite.setMovies(new ArrayList<>());
+        favorite.setUser(user);
+        favorite.setMovies(new ArrayList<>(List.of("MovieTest1", "MovieTest2")));
         favorite.setPeople(new ArrayList<>());
-        favorite.setTvShows(new ArrayList<>());
+        favorite.setTvShows(new ArrayList<>(List.of()));
 
         favoriteDTO = new FavoriteDTO(
-                UUID.randomUUID(),
-                "movieTest1,movieTest2",
-                "peopleTest1,peopleTest2",
-                "tv_showTest1,tv_showTest2"
+                new ArrayList<>(List.of("NewMovie1", "NewMovie2")),
+                new ArrayList<>(List.of("NewPerson1")),
+                new ArrayList<>(List.of("NewTvShow1"))
         );
+
+        favoriteDeleteRequestDTO = new FavoriteDeleteRequestDTO(
+                "movies", "MovieTest1");
     }
 
     @Test
-    public void testSaveFavoriteSuccessfully() {
-        when(favoriteRepository.findById(favoriteDTO.Id())).thenReturn(Optional.of(favorite));
+    public void testSaveFavoriteSuccessfully() throws UserNotFoundException {
+        when(userService.getUser(userId)).thenReturn(user);
+        when(favoriteRepository.findByUser(user)).thenReturn(Optional.of(favorite));
         when(favoriteRepository.save(any(Favorite.class))).thenAnswer(invocation -> invocation.getArgument(0));
 
-        Favorite savedFavorite = favoriteService.save(favoriteDTO);
+        Favorite savedFavorite = favoriteService.save(favoriteDTO, userId);
 
-        verify(favoriteRepository, times(1)).findById(favoriteDTO.Id());
+        verify(userService, times(1)).getUser(userId);
+        verify(favoriteRepository, times(1)).findByUser(user);
         verify(favoriteRepository, times(1)).save(any(Favorite.class));
 
-        assertEquals(2, savedFavorite.getMovies().size());
-        assertEquals("movieTest1", savedFavorite.getMovies().get(0));
-        assertEquals("movieTest2", savedFavorite.getMovies().get(1));
+        assertEquals(4, savedFavorite.getMovies().size());
+        assertTrue(savedFavorite.getMovies().contains("NewMovie1"));
+        assertTrue(savedFavorite.getMovies().contains("NewMovie2"));
 
-        assertEquals(2, savedFavorite.getPeople().size());
-        assertEquals("peopleTest1", savedFavorite.getPeople().get(0));
-        assertEquals("peopleTest2", savedFavorite.getPeople().get(1));
+        assertEquals(1, savedFavorite.getTvShows().size());
+        assertEquals("NewTvShow1", savedFavorite.getTvShows().getFirst());
 
-        assertEquals(2, savedFavorite.getTvShows().size());
-        assertEquals("tv_showTest1", savedFavorite.getTvShows().get(0));
-        assertEquals("tv_showTest2", savedFavorite.getTvShows().get(1));
+        assertEquals(1, savedFavorite.getPeople().size());
+        assertEquals("NewPerson1", savedFavorite.getPeople().getFirst());
     }
 
     @Test
-    public void deleteFavoriteSuccessfully() throws FavoriteNotFoundException {
-        when(favoriteRepository.findById(favorite.getId())).thenReturn(Optional.of(favorite));
+    public void deleteFavoriteSuccessfully() throws UserNotFoundException, FavoriteNotFoundException {
+        when(userService.getUser(userId)).thenReturn(user);
+        when(favoriteRepository.findByUser(user)).thenReturn(Optional.of(favorite));
 
-        favoriteService.deleteFavorite(favorite.getId());
+        favoriteService.delete(userId, favoriteDeleteRequestDTO);
 
-        verify(favoriteRepository, times(1)).delete(favorite);
+        verify(favoriteRepository, times(1)).save(favorite);
+
+        assertFalse(favorite.getMovies().contains("MovieTest1"));
+        assertTrue(favorite.getMovies().contains("MovieTest2"));
     }
 }
-*/
